2007-05-12  David Schleef  <ds@schleef.org>

	* gst/gstplugin.c: gst_plugin_register_func() doesn't actually
	  do anything with the passed "module" parameter, so remove it.
	  Allows removal of additional vestigal code.

2007-05-12  David Schleef  <ds@schleef.org>

	* gst/gstplugin.c:
	  Using sigaction should depend on HAVE_SIGACTION, not HAVE_WIN32.
	  Switch to using g_stat() because it's more portable.

2007-05-12  David Schleef  <ds@schleef.org>

	* gst/gst.c:
	  Add GST_DISABLE_OPTION_PARSING, in order to disable option
	  parsing for embedded systems.
	* gst/gstelementfactory.c:
	  Allow gst_element_register() to be called with plugin==NULL.
	  Did nobody notice that static elements were broken?

2007-05-12  Wim Taymans  <wim@fluendo.com>

	* tools/gst-launch.c: (event_loop):
	Give more interesting info when buffering starts and stops.
	Fix case where buffering starts but we fail to update the buffering flag
	because the target state is not PLAYING.

2007-05-12  Wim Taymans  <wim@fluendo.com>

	* plugins/elements/gstqueue.c: (gst_queue_init),
	(gst_queue_finalize), (update_time_level), (apply_segment),
	(apply_buffer), (gst_queue_locked_flush),
	(gst_queue_locked_enqueue), (gst_queue_locked_dequeue),
	(gst_queue_handle_sink_event), (gst_queue_chain),
	(gst_queue_push_one), (gst_queue_loop):
	* plugins/elements/gstqueue.h:
	Refactor an cleanup queue a bit.
	Do better time level calculations that also work when the srcpad is not
	yet running.
	Remove some unneeded debug lines.

	* tests/check/elements/queue.c: (GST_START_TEST), (queue_suite):
	Added testcase for time level measurement.
	Try to make some stuff more racefree.

2007-05-11  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/gsturi.c: (gst_element_make_from_uri):
	  Don't leak plugin feature.

	* tests/check/Makefile.am:
	* tests/check/gst/.cvsignore:
	* tests/check/gst/gsturi.c: (GST_START_TEST), (gst_uri_suite):
	  Add brain-dead unit test.
