@@ -462,42 +462,42 @@ GST_BOILERPLATE_FULL (type, type_as_function, parent_type,              \
  * GST_ROUND_UP_2:
  * @num: integer value to round up
  *
- * Make number divideable by two without a rest.
+ * Rounds an integer value up to the next multiple of 2.
  */
 #define GST_ROUND_UP_2(num)  (((num)+1)&~1)
 /**
  * GST_ROUND_UP_4:
  * @num: integer value to round up
  *
- * Make number divideable by four without a rest.
+ * Rounds an integer value up to the next multiple of 4.
  */
 #define GST_ROUND_UP_4(num)  (((num)+3)&~3)
 /**
  * GST_ROUND_UP_8:
  * @num: integer value to round up
  *
- * Make number divideable by eight without a rest.
+ * Rounds an integer value up to the next multiple of 8.
  */
 #define GST_ROUND_UP_8(num)  (((num)+7)&~7)
 /**
  * GST_ROUND_UP_16:
  * @num: integer value to round up
  *
- * Make number divideable by 16 without a rest.
+ * Rounds an integer value up to the next multiple of 16.
  */
 #define GST_ROUND_UP_16(num) (((num)+15)&~15)
 /**
  * GST_ROUND_UP_32:
  * @num: integer value to round up
  *
- * Make number divideable by 32 without a rest.
+ * Rounds an integer value up to the next multiple of 32.
  */
 #define GST_ROUND_UP_32(num) (((num)+31)&~31)
 /**
  * GST_ROUND_UP_64:
  * @num: integer value to round up
  *
- * Make number divideable by 64 without a rest.
+ * Rounds an integer value up to the next multiple of 64.
  */
 #define GST_ROUND_UP_64(num) (((num)+63)&~63)
 
@@ -505,7 +505,7 @@ GST_BOILERPLATE_FULL (type, type_as_function, parent_type,              \
  * GST_ROUND_DOWN_2:
  * @num: integer value to round down
  *
- * Make number divisible by two without a rest by rounding it down
+ * Rounds an integer value down to the next multiple of 2.
  *
  * Since: 0.10.12
  */
@@ -514,7 +514,7 @@ GST_BOILERPLATE_FULL (type, type_as_function, parent_type,              \
  * GST_ROUND_DOWN_4:
  * @num: integer value to round down
  *
- * Make number divisible by four without a rest by rounding it down
+ * Rounds an integer value down to the next multiple of 4.
  *
  * Since: 0.10.12
  */
@@ -523,7 +523,7 @@ GST_BOILERPLATE_FULL (type, type_as_function, parent_type,              \
  * GST_ROUND_DOWN_8:
  * @num: integer value to round down
  *
- * Make number divisible by eight without a rest by rounding it down
+ * Rounds an integer value down to the next multiple of 8.
  *
  * Since: 0.10.12
  */
@@ -532,7 +532,7 @@ GST_BOILERPLATE_FULL (type, type_as_function, parent_type,              \
  * GST_ROUND_DOWN_16:
  * @num: integer value to round down
  *
- * Make number divisible by 16 without a rest by rounding it down
+ * Rounds an integer value down to the next multiple of 16.
  *
  * Since: 0.10.12
  */
@@ -541,7 +541,7 @@ GST_BOILERPLATE_FULL (type, type_as_function, parent_type,              \
  * GST_ROUND_DOWN_32:
  * @num: integer value to round down
  *
- * Make number divisible by 32 without a rest by rounding it down
+ * Rounds an integer value down to the next multiple of 32.
  *
  * Since: 0.10.12
  */
@@ -550,7 +550,7 @@ GST_BOILERPLATE_FULL (type, type_as_function, parent_type,              \
  * GST_ROUND_DOWN_64:
  * @num: integer value to round down
  *
- * Make number divisible by 64 without a rest by rounding it down
+ * Rounds an integer value down to the next multiple of 64.
  *
  * Since: 0.10.12
  */
